# hackdavis24

./: .env-example  README.md
backend/: client_auth.py  main.py  pyproject.toml  recorder.py  speech_recognition.py
